# python_ds

./: .gitignore  GoIT_HW_8_new.ipynb  Hw1.ipynb  Hw10_1.ipynb  Hw10_2.ipynb  Hw11.ipynb  Hw12.ipynb  Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  Hw3.ipynb  Hw4.ipynb  Hw5.ipynb  Hw6.ipynb  Hw7.ipynb  Hw8.ipynb  Hw9.ipynb  fashion_mnist_model.h5  group_agg.csv  pyproject.toml
data/Hw5_data/: df_idle.csv  df_running.csv  df_stairs.csv  df_walking.csv
