[tool.poetry]
name = "python-ds"
version = "0.1.0"
description = ""
authors = ["mx_so <108818234+m-rznv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
lxml = "^5.1.0"
html5lib = "^1.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
