[tool.poetry]
name = "python-ds"
version = "0.1.0"
description = ""
authors = ["mx_so <108818234+m-rznv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
lxml = "^5.1.0"
html5lib = "^1.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.16.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
